# boson

./: .clang-format  .codacy.yml  .codedocs  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  appveyor.yml  codecov.yml  index.html  params.json  readthedocs.yml
cmake/: BuildConfig.json.in  Findlibuv.cmake  ProjectGlobalMacros.cmake  ProjectTestFunctions.cmake  SanitizerBlacklist.txt.in
docs/dotgo2016/: boson_slides.html  index.html  phantomrender.js
docs/dotgo2016/introduction/: index.html
docs/dotgo2016/themes/style/: jb.css  jb.scss
docs/doxygen/source/: doxyhtml.conf  doxyxml.conf
docs/go_examples/simplechat/: chat.go  client.go  client2.go
docs/md/: manual.md
docs/sphinx/: Makefile  make.bat
docs/sphinx/source/: conf.py  index.rst
src/boson/: CMakeLists.txt
src/boson/boson/: boson.h  channel.h  config.h.cmake  engine.h  event_loop.h  exception.h  fcontext.h  io_event_loop.h  logger.h  mutex.h  routine.h  select.h  semaphore.h  shared_buffer.h  stack.h  syscall_traits.h  syscalls.h  system.h  thread.h  types.h  utility.h
src/boson/boson/internal/: fcontext.h  netpoller.h  routine.h  stack.h  thread.h
src/boson/boson/memory/: flat_unordered_set.h  linear_allocator.h  local_ptr.h  sparse_vector.h
src/boson/boson/net/: socket.h
src/boson/boson/queues/: lcrq.h  mpmc.h  mpsc.h  simple.h  vectorized_queue.h  weakrb.h  wfqueue.h
src/boson/boson/std/experimental/: apply.h  chrono.h  type_traits.h
src/boson/src/: engine.cc  event_loop.cc  exception.cc  logger.cc  project.cc  routine.cc  semaphore.cc  stack.cc  syscall_shim.cc  syscalls.cc  thread.cc
src/boson/src/internal/: netpoller.cc  routine.cc  stack.cc  thread.cc
src/boson/src/linux/: event_loop_impl.cc  event_loop_impl.h  io_event_loop_impl.cc  io_event_loop_impl.h  system.h
src/boson/src/net/: socket.cc
src/boson/src/queues/: lcrq.cc  simple.cc  wfqueue.cc
src/boson/test/: CMakeLists.txt  channel.cc  event_loop.cc  exception.cc  io_event_loop.cc  logger.cc  memory_flat_unordered_set.cc  memory_sparse_vector.cc  netpoller.cc  queues_mpmc.cc  queues_vectorized_queue.cc  queues_weakrb.cc  routine.cc  select.cc  semaphore.cc  shared_buffer.cc  sockets.cc  static.cc  syscalls.cc  test1.cc  test_local_ptr.cc  test_local_ptr.h  test_mpsc.cc  test_wfqueue.cc
src/boson/test/perf/: ramgrowth01.cc
src/examples/: CMakeLists.txt
src/examples/src/: basic_loop.cc  channel_loop.cc  channel_loop2.cc  chat_server.cc  chat_vs_go.cc  context_loop.cc  frug_channel.cc  frug_channel2.cc  frug_mutex_loop.cc  frug_select.cc  full_chat_server.cc  ld_preload.cc  main.cc  mutex_loop.cc  queue_loop.cc  readme1.cc  readme2.cc  readme3.cc  rw_loop.cc  signal_handling.cc  signal_handling2.cc  socket_server.cc  timed_loop.cc
src/projectlib/: CMakeLists.txt
src/projectlib/projectlib/: project.h
src/projectrun/: CMakeLists.txt
src/projectrun/src/: main.cc
src/test/: CMakeLists.txt
src/test/scripts/: loop_bin.sh
