# Boost support
set(LIBRARIES)
#find_package(Boost COMPONENTS context REQUIRED)
#if(Boost_FOUND)
 #include_directories(${Boost_INCLUDE_DIRS})
    #if(CMAKE_COMPILER_IS_GNUCXX)
        #set(LIBRARIES "${LIBRARIES}" "${Boost_LIBRARIES}")
    #else()
        #link_directories(${Boost_LIBRARY_DIRS})
    #endif()
#endif()

file(GLOB srcs *.cc)
list(REMOVE_ITEM srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cc")

macro(add_example NAME)
    add_executable(${NAME} src/${NAME}.cc)
    target_link_libraries(${NAME} boson ${LIBRARIES})
endmacro()

add_example(basic_loop)
add_example(timed_loop)
add_example(rw_loop)
add_example(mutex_loop)
add_example(channel_loop)
add_example(channel_loop2)
add_example(socket_server)
add_example(chat_server)
add_example(full_chat_server)

add_example(readme1)
add_example(readme2)
add_example(readme3)
